# audiex

./: .gitignore  README.md  mix.exs
.github/workflows/: release.yml
lib/: audiex.ex
lib/audiex/: native.ex
native/audiex_native/: Cargo.toml  config.toml
native/audiex_native/src/: lib.rs
test/: audiex_test.exs  benchmark.exs
test/fixtures/: A440_44100.flac
